# chinese_detection

./: CHANGELOG.md  Cargo.toml  README.md
profiles/: en.profile  py.profile
src/: language_profiler.rs  lib.rs
