[package]
name = "chinese_detection"
version = "1.0.0"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "Classify a string as either English, Chinese, or Pinyin."
repository = "https://github.com/sotch-pr35mac/chinese_detection"
readme = "README.md"
keywords = ["chinese", "hanzi", "classify", "english", "pinyin"]
categories = ["text-processing", "localization", "internationalization", "value-formatting"]
license = "MIT"
edition = "2018"

[dependencies]
bincode = "1.2.1"
