[package]
name = "chinese_detection"
version = "2.0.4"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
description = "Classify a string as either English, Chinese, or Pinyin."
repository = "https://github.com/sotch-pr35mac/chinese_detection"
readme = "README.md"
keywords = ["chinese", "hanzi", "classify", "english", "pinyin"]
categories = ["text-processing", "localization", "internationalization", "value-formatting"]
license = "MIT"
edition = "2021"

[dependencies]
bincode = "1.2.1"
once_cell = "1.13.0"
